sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:11: error: not found: value ecart
      ecart-=ecart
      ^AlgShellSort:11: error: not found: value ecart
      ecart-=ecart
             ^